розпочав секцію досвід

--- a/index.html
+++ b/index.html
@@ -21,6 +21,52 @@
         </ul>
     </div>
 </header>
+<main>
+    <section class="hero">
+        <div class="container">
+            <ul class="hero__list">
+                <li class="hero__item">
+                    <img src="./img/fotka.png"/>
+                </li>
+                <li class="hero__item">
+                    <h1 class="hero__title">Павлов Володимир</h1>
+                    <h2>Верстальник</h2>
+                    <p>Верстальник - це професіонал, що втілює в інтернет-простір мрію замовника та фантазію дизайнера</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="experience">
+        <div class="container">
+            <div class="wrapper">
+                <div class="education">
+                    <ul class="experience__list">
+                        <li class="experience__item">
+                            <h2 class="experience__title"></h2>
+                            <h3 class="experience__name"></h3>
+                             <p class="experience__description"></p>
+                        </li>
+                        <li class="experience__item">
+                            <h2 class="experience__title"></h2>
+                            <h3 class="experience__name"></h3>
+                            <p class="experience__description"></p>
+                        </li>
+                        <li class="experience__item">
+                            <h2 class="experience__title"></h2>
+                            <h3 class="experience__name"></h3>
+                            <p class="experience__description"></p>
+                        </li>
+                    </ul>
+                    
+
+                </div>
+                <div class="experience">
+
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
     
 </body>
 </html>
