--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </li>
                 <li class="hero__item">
                     <h1 class="hero__title">Павлов Володимир</h1>
-                    <h2>Верстальник</h2>
-                    <p>Верстальник - це професіонал, що втілює в інтернет-простір мрію замовника та фантазію дизайнера</p>
+                    <h2 class="hero__subtitle">Верстальник</h2>
+                    <p class="hero__qoute">Верстальник - це професіонал, що втілює в інтернет-простір мрію замовника та фантазію дизайнера</p>
                 </li>
             </ul>
         </div>
