--- a/index.html
+++ b/index.html
@@ -13,8 +13,27 @@
 
 </head>
 <body>
+
 <header>
     <div class="container">
+        <div class="calling-message">
+            <h1 class="calling-message__title">Calling
+                 <span class="viber-icon">
+                    <svg width="40px" height="40px">
+                        <use xmlns href="./img/symbol-defs.svg#icon-viber"></use>
+                    </svg>
+                </span>
+                 or
+                 <span class="telegram-icon">
+                    <svg  width="40px" height="40px">
+                        <use xmlns href="./img/symbol-defs.svg#icon-telegram">
+
+                        </use>>
+                    </svg>
+                </span>
+            only</h1>
+        </div>
+       
         <ul class="header__list">
             <li class="header__item">Павлов Володимир</li>
             <li class="header__item">Верстальник</li>
@@ -124,10 +143,10 @@
     <footer>
         <div class="container">
             <ul class="footer__list">
-                <li class="footer__item"><a href="mailto:pavlov__vladimir@i.ua">pavlov__vladimir@i.ua</a></li>
+                <li class="footer__item"><a class="footer__link" href="mailto:pavlov__vladimir@i.ua">pavlov__vladimir@i.ua</a></li>
                 <li class="footer__item">
-                    <a href="tel:+380956746791">095-67-4-67-91</a></li>
-                <li class="footer__item"><a href="https://github.com/VladimirPavlov1">https://github.com/VladimirPavlov1"</a></li>
+                    <a class="footer__link" href="tel:+380956746791">095-67-4-67-91</a></li>
+                <li class="footer__item"><a class="footer__link" href="https://github.com/VladimirPavlov1">https://github.com/VladimirPavlov1"</a></li>
             </ul>
         </div>
     </footer>
