--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <li class="experience__item">
                   <h3 class="experience__name">GO-IT</h3>
                   <p class="experience__description">
-                    05,2022- - Все покинув - навчаюся в GO-IT
+                    05,2022- - Now learning in GO-IT
                   </p>
                 </li>
                 <li class="experience__item">
